--- a/packages/client/src/index.css
+++ b/packages/client/src/index.css
@@ -87,10 +87,11 @@
 
   .modal {
     @apply p-4;
-    @apply absolute;
+    @apply absolute left-1/2 transform -translate-x-1/2;
     @apply z-10;
     @apply bg-white;
-    @apply w-4/5;
+    @apply w-1/3;
+    @apply mx-auto;
   }
   .modal-title {
     @apply text-center;
@@ -147,6 +148,10 @@
   }
   .modal-dropdown-row > select {
     @apply w-24;
+  }
+
+  .modal-button-row {
+    @apply mt-6;
   }
 
   .ellipses-dot {
